# mdb2sqlite

./: .gitignore  ConvertUTF.c  FieldStatements.cpp  FieldStatements.h  INI.h  IndexStatements.cpp  IndexStatements.h  LICENSE  README.md  RelationshipStatements.cpp  RelationshipStatements.h  Resource.h  SQLiteConversion.cpp  SQLiteConversion.h  naujastestas.cpp  naujastestas.h  naujastestas.rc  naujastestas.vcxproj  naujastestas.vcxproj.filters  settings.ini  sqlite3.h  sqlitestatementexecution.cpp  sqlitestatementexecution.h  stdafx.cpp  stdafx.h
Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
mdb2sqlite/: FieldStatements.cpp  FieldStatements.h  FileUtils.cpp  FileUtils.h  IndexStatements.cpp  IndexStatements.h  Makefile.in  OnAction.cpp  OnAction.h  RelationshipStatements.cpp  RelationshipStatements.h  UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog3.XML  UpgradeLog4.XML  WindowPosition.ini  makefile.bcc  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  mdb2sqlite.bkl  mdb2sqlite.cpp  mdb2sqlite.dsp  mdb2sqlite.h  mdb2sqlite.iss  mdb2sqlite.sln  mdb2sqlite_vc9.vcxproj  naujastestas.cpp  naujastestas.h  pt34.sqlite  readme.txt  sqlite3.h  sqlite3.lib  sqlitestatementexecution.cpp  sqlitestatementexecution.h  stdafx.cpp
mdb2sqlite/vc_mswud/mdb2sqlite/: mdb2sqlite.exe.embed.manifest  mdb2sqlite.exe.embed.manifest.res  mdb2sqlite.exe.intermediate.manifest  mdb2sqlite.lastbuildstate  mdb2sqlite_manifest.rc
src/: CMakeLists.txt  DBField.h  FieldStatements.cpp  FieldStatements.h  FileUtils.cpp  FileUtils.h  IndexStatements.cpp  IndexStatements.h  OnAction.cpp  OnAction.h  RelationshipStatements.cpp  RelationshipStatements.h  Settings.h  SettingsDlg.cpp  SettingsDlg.h  StructurePreviewDlg.cpp  StructurePreviewDlg.h  UIObs.h  mdb2sqlite.cpp  mdb2sqlite.h  sqlitestatementexecution.cpp  sqlitestatementexecution.h  stdafx.h  wxWidgetsLink.h
